# tidybot_ros

./: .cyclonedds.xml.swp  .gitignore  README.md  backup_generator2.py  build.sh  colcon_defaults.yaml  compare_logs.py  container.Dockerfile  cyclonedds.xml  eef_poses.csv  entrypoint.sh  fastdds.xml  fastrtps_profile.xml  generator.py  generator_debug.py  generator_working_slow.py  notes  notes.txt  requirements.txt  run.sh  setup_can.sh  super_client_configuration_file.xml
docker/: README.md  (+10 more)
src/tidybot_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/tidybot_control/config/: index.html  joystick.yaml
src/tidybot_control/launch/: joystick.launch.py  remote.launch.py  subscriber.launch.py  teleop.launch.py  web_server.launch.py  webxr.launch.py
src/tidybot_control/tidybot_control/: joint_states_listener.py  joystick_controller.py  remote_controller.py  reset_env.py  state_controller.py  teleop_controller.py  teleop_server.py  twist_to_multiarray.py  web_server_publisher.py  web_server_relay.py  web_server_subscriber.cpp  ws_relay.py
src/tidybot_description/: README.md  package.xml  setup.cfg  setup.py
src/tidybot_description/config/: arm.rviz  tidybot.rviz  tidybot_controllers.yaml  tidybot_hande.rviz
src/tidybot_description/launch/: description.launch.py  display.launch.py  launch_isaac_lab.launch.py  launch_isaac_sim.launch.py  launch_sim_arm.launch.py  launch_sim_robot.launch.py  sim.launch.py  sim_arm.launch.py  sim_tidybot.launch.py
src/tidybot_description/meshes/base/: arm_plate.stl  bumper.stl  top_plate.stl
src/tidybot_description/meshes/base/tidybot/: body.stl  bottom_plate.stl
src/tidybot_description/meshes/base/tidybot++/: Kinova.stl
src/tidybot_description/meshes/grippers/robotiq_2f_85/: robotiq_arg2f_85_base_link.stl  robotiq_arg2f_85_inner_finger.stl  robotiq_arg2f_85_inner_knuckle.stl  robotiq_arg2f_85_outer_finger.stl  robotiq_arg2f_85_outer_knuckle.stl  robotiq_arg2f_85_pad.stl
src/tidybot_description/tidybot_description/: contact_force_publisher.py  contact_force_publisher_2f_85.py  contact_force_publisher_hande.py  isaac_lab_bridge.py  isaac_sim_bridge.py  isaac_sim_setup.py  isaac_sim_setup_2f_85.py  isaac_sim_setup_hande.py  tf_relay.py
src/tidybot_description/tidybot_isaac/: tidybot_isaac.usd
src/tidybot_description/tidybot_isaac/configuration/: tidybot_isaac_physics.usd  tidybot_isaac_robot.usd  tidybot_isaac_sensor.usd
src/tidybot_description/urdf/: arm.urdf  arm.xacro  bot.xacro  ros2_control.xacro  ros2_control.yaml  tidybot.gazebo.xacro  tidybot.ros2_control.xacro  tidybot.urdf  tidybot.xacro  tidybot_2f_85_isaac.urdf  tidybot_hande_isaac.urdf  tidybot_isaac.urdf
src/tidybot_description/urdf/arms/gen3_7dof/: gen3_7dof_macro.xacro  gen3_7dof_transmission.xacro
src/tidybot_description/urdf/arms/gen3_lite/: gen3_lite_macro.xacro  gen3_lite_transmission.xacro
src/tidybot_description/urdf/base/: base.xacro  base_macro.xacro  base_transmission.xacro
src/tidybot_description/urdf/world/: fetch_coke.sdf  fetch_cube.sdf  office.sdf  warehouse.sdf
src/tidybot_description/usd/: tidybot.usd
src/tidybot_description/usd/Collected_open_drawer/: .collect.mapping.json  open_drawer.usd
src/tidybot_description/usd/Collected_tidybot/: tidybot.usd
src/tidybot_description/usd/Collected_tidybot_hande/: tidybot.usd
src/tidybot_driver/: README.md  package.xml  setup.cfg  setup.py
src/tidybot_driver/config/: drawer_task.rviz  hardware.rviz  pi_zero_deploy.rviz
src/tidybot_driver/launch/: drive.launch.py  launch_hardware_robot.launch.py
src/tidybot_driver/tidybot_driver/: arm_controller.py  arm_server.py  base.py  base_server.py  camera.py  camera_external.py  camera_wrist.py  ik_solver.py  joint_state_publisher.py  kinova.py  play_csv_delta.py  play_csv_pose.py  tactile_sensor.py  tidybot.py
src/tidybot_episode/: CMakeLists.txt  LICENSE  README.md  package.xml
src/tidybot_episode/launch/: record_obs.launch.py  synchronized_recorder.launch.py
src/tidybot_episode/src/: actions_recorder.cpp  obs_reader.cpp  obs_recorder.cpp  record_episode.cpp  rosbag_to_hdf5.cpp  rosbag_to_parquet.cpp  synchronized_recorder.cpp
src/tidybot_episode/tidybot_episode/: __init__.py  sensor_data_recorder.py
src/tidybot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/tidybot_moveit_config/config/: arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  joint_limits_hande.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  tidybot.ros2_control.xacro  tidybot.srdf  tidybot.urdf.xacro  tidybot_hande.srdf
src/tidybot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/tidybot_moveit_config/src/: demo_plan.cpp  teleop_to_moveit.cpp  web_server_moveit.cpp  web_server_subscriber.cpp
src/tidybot_solver/: CMakeLists.txt  README.md  package.xml
src/tidybot_solver/config/: demo_servo_config.yaml  servo_parameters.yaml  tidybot_servo_config.yaml  tidybot_servo_hardware_config.yaml  tidybot_servo_parameters.yaml  tidybot_servo_sim_config.yaml
src/tidybot_solver/launch/: demo_twist.launch.py  joystick_twist.launch.py  launch_moveit_pose_ik.launch.py  launch_moveit_vel_ik.launch.py  launch_realtime_servo.launch.py  moveit_servo_twist.launch.py  moveit_twist.launch.py  trajectory_to_joint_state.launch.py
src/tidybot_solver/src/: demo_plan.cpp  demo_twist.cpp  joystick_to_moveit.cpp  keyboard_input.cpp  moveit_ee_pose_ik.cpp  moveit_ee_vel_ik.cpp  multi_stage_planner.cpp  teleop_to_moveit.cpp  trajectory_to_joint_state.cpp  twist_commander.cpp  twist_to_moveit.cpp
src/tidybot_teleop/: README.md  package.xml  setup.cfg  setup.py
src/tidybot_teleop/config/: Xbox_SeriesX_Wireless_config.yaml
src/tidybot_teleop/launch/: joystick.launch.py  remote.launch.py  teleop.launch.py
src/tidybot_teleop/tidybot_teleop/: joystick_teleop.py  phone_teleop.py  phone_teleop_server.py  remote_teleop.py  state_controller.py
(+446 files in other folders)
