<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tidybot_teleop</name>
  <version>0.0.0</version>
  <description>TidyBot teleoperation package</description>
  <maintainer email="janchen@umich.edu">janchen</maintainer>
  <maintainer email="yuandi@umich.edu">yuandi</maintainer>
  <maintainer email="yuandi@umich.edu">yuandi</maintainer>
  <license>Apache 2License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>tidybot_utils</build_depend>
  <build_depend>tidybot_utils</build_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <exec_depend>flask</exec_depend>
  <exec_depend>flask_socketio</exec_depend>

  <exec_depend>logging</exec_depend>
  <exec_depend>socket</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>tidybot_utils</exec_depend>
  <exec_depend>tidybot_utils</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>moveit_servo</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
